--- a/.ghc.environment.x86_64-darwin-8.6.3
+++ b/.ghc.environment.x86_64-darwin-8.6.3
@@ -8,6 +8,7 @@ clear-package-db
 global-package-db
 package-db /Users/adam/.cabal/store/ghc-8.6.3/package.db
 package-db dist-newstyle/packagedb/ghc-8.6.3
+package-id census-servant-0.1.0.0-inplace
 package-id sn-1.4.2.0-88f4879c
 package-id ttprsc-0.13.2.2-96d8fd71
 package-id array-0.5.3.0
