Working on parsing JSON arrays to frames

--- a/.ghc.environment.x86_64-darwin-8.6.3
+++ b/.ghc.environment.x86_64-darwin-8.6.3
@@ -8,145 +8,156 @@ clear-package-db
 global-package-db
 package-db /Users/adam/.cabal/store/ghc-8.6.3/package.db
 package-db dist-newstyle/packagedb/ghc-8.6.3
-package-id census-servant-0.1.0.0-inplace
-package-id sn-1.4.2.0-88f4879c
-package-id ttprsc-0.13.2.2-96d8fd71
-package-id array-0.5.3.0
+package-id Frms-0.6.0-d7572529
 package-id base-4.12.0.0
 package-id ghc-prim-0.5.3
 package-id rts
 package-id integer-gmp-1.0.2.0
 package-id bytestring-0.10.8.2
 package-id deepseq-1.4.4.0
-package-id containers-0.6.0.1
-package-id scntfc-0.3.6.2-edacb6eb
-package-id binary-0.8.6.0
-package-id hshbl-1.2.7.0-e9e57fd1
-package-id text-1.2.3.1
-package-id ntgr-lgrthms-1.0.2.2-4d49de73
-package-id prmtv-0.6.4.0-36a4179f
+package-id array-0.5.3.0
+package-id cntnrs-0.5.11.0-30581a34
+package-id cntrvrnt-1.5-22061e36
+package-id SttVr-1.1.1.1-91d166cc
+package-id stm-2.5.0.0
 package-id transformers-0.5.5.0
-package-id bs-cmpt-0.10.5-fc37fcfc
-package-id unix-2.7.2.2
-package-id time-1.8.0.2
-package-id dlst-0.8.0.5-a92692ad
+package-id dscrmntn-0.3-14b12d38
+package-id hshbl-1.2.7.0-691e5001
+package-id txt-1.2.3.1-f8090311
+package-id bnry-0.8.6.0-18e9cc91
+package-id prmtv-0.6.4.0-36a4179f
+package-id prfnctrs-5.3-ce63f360
+package-id bs-rphns-0.8-00de1a64
+package-id bfnctrs-5.5.3-09b1baed
+package-id cmnd-5.0.4-3e02404a
+package-id dstrbtv-0.6-a46b3ced
 package-id tggd-0.8.6-966d440d
 package-id template-haskell-2.14.0.0
 package-id ghc-boot-th-8.6.3
 package-id pretty-1.1.3.6
-package-id th-bstrctn-0.2.8.0-e23b06b4
-package-id tm-lcl-cmpt-0.1.1.5-e374ade0
-package-id nrdrd-cntnrs-0.2.9.0-65a9a217
-package-id d-typs-1.0.3-7d7facbc
-package-id rndm-1.1-6b409e24
-package-id vctr-0.12.0.1-0dd75106
-package-id http-p-dt-0.4-42f4984c
-package-id ttprsc-s8601-1.0.1.0-e618d08d
-package-id ck-0.4.4-cf41818c
-package-id dt-dflt-clss-0.1.2.0-733a3e16
-package-id http-typs-0.12.2-acb2b507
-package-id cs-nsnstv-1.2.0.11-4c2f3704
-package-id lns-4.17-85df8a5c
-package-id bs-rphns-0.8-00de1a64
-package-id bfnctrs-5.5.3-5812a448
-package-id cmnd-5.0.4-739aa23e
-package-id cntrvrnt-1.5-22061e36
-package-id SttVr-1.1.1.1-91d166cc
-package-id stm-2.5.0.0
-package-id dstrbtv-0.6-a46b3ced
 package-id smgrps-0.18.5-49ba2bab
 package-id trnsfrmrs-cmpt-0.6.2-e76831fa
-package-id cll-stck-0.1.0-71e04fa6
+package-id th-bstrctn-0.2.8.0-acfa0eff
+package-id prmss-0.3-2657af4d
+package-id vctr-0.12.0.1-0dd75106
+package-id vd-0.7.2-d012e397
+package-id pps-4.3.9-0f120c5b
 package-id xcptns-0.10.0-acb95353
 package-id mtl-2.2.2
-package-id filepath-1.4.2.1
-package-id fr-5.1-eff64390
-package-id prfnctrs-5.3-c49dd23d
-package-id smgrpds-5.3.1-f0c6c37c
+package-id mmrph-1.1.2-8a43cbd2
+package-id pps-bytstrng-2.1.6-9708f944
+package-id pps-grp-1.0.12-9583f6a7
+package-id fr-5.1-742617c4
+package-id smgrpds-5.3.1-22228708
+package-id nrdrd-cntnrs-0.2.9.0-3f8ed01d
 package-id trnsfrmrs-bs-0.4.5.2-ee749873
-package-id kn-xtnsns-5.2-20f1aa2d
-package-id djnctns-4.4-ce235957
-package-id vd-0.7.2-d012e397
-package-id nvrnt-0.5.1-5081891f
-package-id prlll-3.2.2.0-3cdcf26e
+package-id pps-prs-3.0.8-46016ed2
+package-id strngsrch-0.3.6.6-5a86e698
+package-id pps-sf-2.3.1-4097da4d
+package-id mnd-cntrl-1.0.2.3-2c143f0a
+package-id rdbl-0.3.1-37a06558
+package-id vctr-th-nbx-0.2.1.6-95e7d8d4
+package-id vnyl-0.10.0-2e338ed4
+package-id sn-1.4.2.0-0c9c5cd3
+package-id ttprsc-0.13.2.2-d9831230
+package-id scntfc-0.3.6.2-0e41dbc6
+package-id ntgr-lgrthms-1.0.2.2-4d49de73
+package-id bs-cmpt-0.10.5-fc37fcfc
+package-id unix-2.7.2.2
+package-id time-1.8.0.2
+package-id dlst-0.8.0.5-a92692ad
+package-id tm-lcl-cmpt-0.1.1.5-e374ade0
+package-id d-typs-1.0.3-80f4ad1c
+package-id rndm-1.1-6b409e24
+package-id http-p-dt-0.4-546831e0
+package-id ttprsc-s8601-1.0.1.0-6b9cb735
+package-id ck-0.4.4-c5000b26
+package-id dt-dflt-clss-0.1.2.0-733a3e16
+package-id http-typs-0.12.2-6e7a15df
+package-id cs-nsnstv-1.2.0.11-ced68456
+package-id lns-4.17-8b55df87
+package-id cll-stck-0.1.0-71e04fa6
+package-id filepath-1.4.2.1
+package-id kn-xtnsns-5.2-6f640ed8
+package-id djnctns-4.4-7ce62995
+package-id nvrnt-0.5.1-5ff8cccc
+package-id prlll-3.2.2.0-db6e353a
 package-id rflctn-2.1.4-114bfca9
-package-id lns-sn-1.0.2-023d9951
-package-id ntwrk-r-2.6.1.0-e19ed71a
-package-id parsec-3.1.13.0
+package-id lns-sn-1.0.2-6ad30605
+package-id ntwrk-r-2.6.1.0-f20dc227
+package-id prsc-3.1.13.0-f7e8b953
 package-id sf-xcptns-0.1.7.0-e177c5d6
-package-id srvnt-0.15-c28f1a0e
-package-id QckChck-2.12.6.1-14119e86
+package-id srvnt-0.15-bed3b610
+package-id QckChck-2.12.6.1-3df60eeb
 package-id rf-2.0.0.0-6c80621a
 package-id tf-rndm-0.5-60cb9e89
-package-id http-md-0.7.1.3-9ec9ce6d
+package-id http-md-0.7.1.3-10ea8156
 package-id tf8-strng-1.0.1.1-1e834a29
-package-id mmrph-1.1.2-8a43cbd2
 package-id sngltn-bl-0.1.4-4cfd2c98
-package-id strng-cnvrsns-0.4.0.1-6ec0559d
-package-id vlt-0.3.1.2-9590bd9c
-package-id srvnt-clnt-0.15-7a69a896
-package-id http-clnt-0.5.14-228c22a8
-package-id blz-bldr-0.4.1.0-07cd9e40
+package-id strng-cnvrsns-0.4.0.1-bce9e19a
+package-id vlt-0.3.1.2-fd49e98f
+package-id srvnt-clnt-0.15-24b430b1
+package-id http-clnt-0.5.14-ce3e4e25
+package-id blz-bldr-0.4.1.0-0a8c68a2
 package-id mmry-0.14.18-2f3fe0e7
 package-id bsmnt-0.0.8-b2b1f8b5
-package-id mm-typs-0.1.0.8-5fdd3e83
+package-id mm-typs-0.1.0.8-40b1db84
 package-id ntwrk-2.8.0.0-f10b4ce5
-package-id strmng-cmmns-0.2.1.0-2430449f
-package-id sync-2.2.1-6d4167c1
+package-id strmng-cmmns-0.2.1.0-7562808c
+package-id sync-2.2.1-e9d88ad1
 package-id directory-1.3.3.0
 package-id process-1.6.3.0
 package-id zlb-0.6.2-9758b8bf
-package-id mnd-cntrl-1.0.2.3-2c143f0a
-package-id srvnt-clnt-cr-0.15-5a461612
+package-id srvnt-clnt-cr-0.15-02a220dd
 package-id bs64-bytstrng-1.0.0.1-551b6b9b
 package-id gnrcs-sp-0.4.0.1-1a3dbd17
 package-id sp-cr-0.4.0.0-1878d9f6
 package-id sf-0.3.17-de36676b
-package-id srvnt-srvr-0.15-3076bb1f
-package-id rsrct-1.2.2-a51cc299
+package-id srvnt-srvr-0.15-16ca00a5
+package-id rsrct-1.2.2-ab938f85
 package-id nlft-cr-0.1.2.0-42b2b121
-package-id w-3.2.1.2-5ad85666
-package-id w-pp-sttc-3.1.6.2-0b8ca65f
-package-id blz-html-0.9.1.1-9528e997
-package-id blz-mrkp-0.8.2.2-1c9d81ed
+package-id w-3.2.1.2-72f27867
+package-id w-pp-sttc-3.1.6.2-5c7d861f
+package-id blz-html-0.9.1.1-85959907
+package-id blz-mrkp-0.8.2.2-21b77b5c
 package-id cryptnt-0.25-8653e0f5
 package-id fl-mbd-0.0.11-505e07eb
-package-id http-dt-0.0.8-202297fa
+package-id http-dt-0.0.8-a7216bcd
 package-id ld-lcl-1.0.0.7-dc18342a
 package-id ptprs-pplctv-0.14.3.0-afefca8d
 package-id ns-wl-pprnt-0.6.8.2-dc1e525e
 package-id ns-trmnl-0.8.2-5f43dbad
 package-id clr-2.3.4-9d218237
 package-id nx-cmpt-0.5.1-948f09c4
-package-id w-xtr-3.0.24.3-5d641981
-package-id fst-lggr-2.4.11-a4b8c6c2
+package-id w-xtr-3.0.24.3-7367c6ed
+package-id fst-lggr-2.4.11-69714fa1
 package-id t-pdt-0.1.4-29279433
 package-id sy-fl-0.2.2-17d01334
-package-id nx-tm-0.3.8-c040e193
+package-id nx-tm-0.3.8-400035c2
 package-id ld-tm-1.1.0.3-7df89a11
-package-id prt-1.7.6-a587daaa
+package-id prt-1.7.6-2da17ec9
 package-id ppr-0.1.4-6048ba6d
 package-id bytrdr-1.0.4-d8111396
-package-id w-lggr-2.3.2-2274ac6d
+package-id w-lggr-2.3.2-a4eeeac3
 package-id wrd8-0.1.3-d1889831
-package-id wrp-3.2.25-8d41ae72
+package-id wrp-3.2.25-27317fcb
 package-id bsb-http-chnkd-0.0.0.4-055b962d
-package-id http2-1.6.4-71b5bab9
+package-id http2-1.6.4-1d47a1ef
 package-id ntwrk-byt-rdr-0.0.0.0-4ffabd6d
-package-id psqs-0.2.7.0-73d2cd38
+package-id psqs-0.2.7.0-d1fb30e7
 package-id smpl-sndfl-0.2.27-b3808f67
-package-id http-clnt-tls-0.3.5.3-c2074f26
-package-id cnnctn-0.2.8-bf6f3559
+package-id http-clnt-tls-0.3.5.3-c99212a5
+package-id cnnctn-0.2.8-679aef54
 package-id bytbl-0.1.1-9f99eca9
-package-id scks-0.5.6-db1d42ec
-package-id crl-0.5.7.0-8756cd8a
-package-id tls-1.4.1-cfb3ca9f
+package-id scks-0.5.6-9dea8c84
+package-id crl-0.5.7.0-3ab5e31c
+package-id tls-1.4.1-d1d1d6b0
 package-id sn1-ncdng-0.9.5-df8a2212
 package-id sn1-typs-0.3.2-384f619e
 package-id hrglss-0.2.12-9aa2e6de
-package-id x509-1.7.5-d0b4f62b
+package-id x509-1.7.5-967b9ec6
 package-id sn1-prs-0.9.4-c3f363c4
 package-id pm-0.2.4-021665b0
-package-id x509-str-1.6.7-5a187f1d
-package-id x509-vldtn-1.6.11-9e997ada
-package-id x509-systm-1.6.6-2886ad5d
+package-id x509-str-1.6.7-3cc2282c
+package-id x509-vldtn-1.6.11-03376952
+package-id x509-systm-1.6.6-32c014a2
