--- a/.ghc.environment.x86_64-darwin-8.6.3
+++ b/.ghc.environment.x86_64-darwin-8.6.3
@@ -9,7 +9,7 @@ global-package-db
 package-db /Users/adam/.cabal/store/ghc-8.6.3/package.db
 package-db dist-newstyle/packagedb/ghc-8.6.3
 package-id census-servant-0.1.0.0-inplace
-package-id Frms-0.6.0-d7572529
+package-id Frms-0.6.1-2be9189a
 package-id base-4.12.0.0
 package-id ghc-prim-0.5.3
 package-id rts
@@ -17,148 +17,148 @@ package-id integer-gmp-1.0.2.0
 package-id bytestring-0.10.8.2
 package-id deepseq-1.4.4.0
 package-id array-0.5.3.0
-package-id cntnrs-0.5.11.0-30581a34
-package-id cntrvrnt-1.5-22061e36
-package-id SttVr-1.1.1.1-91d166cc
+package-id containers-0.6.0.1
+package-id cntrvrnt-1.5-7b4bf4aa
+package-id SttVr-1.1.1.1-df1fcbaf
 package-id stm-2.5.0.0
 package-id transformers-0.5.5.0
-package-id dscrmntn-0.3-14b12d38
-package-id hshbl-1.2.7.0-691e5001
-package-id txt-1.2.3.1-f8090311
-package-id bnry-0.8.6.0-18e9cc91
-package-id prmtv-0.6.4.0-36a4179f
-package-id prfnctrs-5.3-ce63f360
-package-id bs-rphns-0.8-00de1a64
-package-id bfnctrs-5.5.3-09b1baed
-package-id cmnd-5.0.4-3e02404a
-package-id dstrbtv-0.6-a46b3ced
-package-id tggd-0.8.6-966d440d
+package-id dscrmntn-0.3-2c66de33
+package-id hshbl-1.2.7.0-76f70ac8
+package-id text-1.2.3.1
+package-id binary-0.8.6.0
+package-id prmtv-0.6.4.0-5f3935ef
+package-id prfnctrs-5.3-c1ed0abf
+package-id bs-rphns-0.8-1c6eb5d9
+package-id bfnctrs-5.5.3-55f39420
+package-id cmnd-5.0.4-4d0a299e
+package-id dstrbtv-0.6-90a2fd04
+package-id tggd-0.8.6-1635dd67
 package-id template-haskell-2.14.0.0
 package-id ghc-boot-th-8.6.3
 package-id pretty-1.1.3.6
-package-id smgrps-0.18.5-49ba2bab
-package-id trnsfrmrs-cmpt-0.6.2-e76831fa
-package-id th-bstrctn-0.2.8.0-acfa0eff
-package-id prmss-0.3-2657af4d
-package-id vctr-0.12.0.1-0dd75106
-package-id vd-0.7.2-d012e397
-package-id pps-4.3.9-0f120c5b
-package-id xcptns-0.10.0-acb95353
+package-id smgrps-0.18.5-93e041b1
+package-id trnsfrmrs-cmpt-0.6.2-d35b8c14
+package-id th-bstrctn-0.2.10.0-7605b061
+package-id prmss-0.3-93c6fff2
+package-id vctr-0.12.0.2-235e9b95
+package-id vd-0.7.2-8fe6a22c
+package-id pps-4.3.9-df51c011
+package-id xcptns-0.10.0-a36f1d45
 package-id mtl-2.2.2
-package-id mmrph-1.1.2-8a43cbd2
-package-id pps-bytstrng-2.1.6-9708f944
-package-id pps-grp-1.0.12-9583f6a7
-package-id fr-5.1-742617c4
-package-id smgrpds-5.3.1-22228708
-package-id nrdrd-cntnrs-0.2.9.0-3f8ed01d
-package-id trnsfrmrs-bs-0.4.5.2-ee749873
-package-id pps-prs-3.0.8-46016ed2
-package-id strngsrch-0.3.6.6-5a86e698
-package-id pps-sf-2.3.1-4097da4d
-package-id mnd-cntrl-1.0.2.3-2c143f0a
-package-id rdbl-0.3.1-37a06558
-package-id vctr-th-nbx-0.2.1.6-95e7d8d4
-package-id vnyl-0.10.0-2e338ed4
-package-id sn-1.4.2.0-0c9c5cd3
-package-id ttprsc-0.13.2.2-d9831230
-package-id scntfc-0.3.6.2-0e41dbc6
-package-id ntgr-lgrthms-1.0.2.2-4d49de73
-package-id bs-cmpt-0.10.5-fc37fcfc
+package-id mmrph-1.1.2-f3f6e7f1
+package-id pps-bytstrng-2.1.6-0c21ad8d
+package-id pps-grp-1.0.12-843e351b
+package-id fr-5.1-7d7c1083
+package-id smgrpds-5.3.2-60771104
+package-id nrdrd-cntnrs-0.2.10.0-347b9ab6
+package-id trnsfrmrs-bs-0.4.5.2-e5318531
+package-id pps-prs-3.0.8-92aa6acb
+package-id strngsrch-0.3.6.6-983d128c
+package-id pps-sf-2.3.1-b05dd278
+package-id mnd-cntrl-1.0.2.3-07a13ae3
+package-id rdbl-0.3.1-877414ac
+package-id vctr-th-nbx-0.2.1.6-cea8d42a
+package-id vnyl-0.11.0-bf414df6
+package-id sn-1.4.2.0-2747edb1
+package-id ttprsc-0.13.2.2-fdba5e53
+package-id scntfc-0.3.6.2-6aa90595
+package-id ntgr-lgrthms-1.0.2.2-17481a6d
+package-id bs-cmpt-0.10.5-c2161dc0
 package-id unix-2.7.2.2
 package-id time-1.8.0.2
-package-id dlst-0.8.0.5-a92692ad
-package-id tm-lcl-cmpt-0.1.1.5-e374ade0
-package-id d-typs-1.0.3-80f4ad1c
-package-id rndm-1.1-6b409e24
-package-id http-p-dt-0.4-546831e0
-package-id ttprsc-s8601-1.0.1.0-6b9cb735
-package-id ck-0.4.4-c5000b26
-package-id dt-dflt-clss-0.1.2.0-733a3e16
-package-id http-typs-0.12.2-6e7a15df
-package-id cs-nsnstv-1.2.0.11-ced68456
-package-id lns-4.17-8b55df87
-package-id cll-stck-0.1.0-71e04fa6
+package-id dlst-0.8.0.5-8773783b
+package-id tm-lcl-cmpt-0.1.1.5-36e74eb7
+package-id d-typs-1.0.3-d0d328e9
+package-id rndm-1.1-020332f5
+package-id http-p-dt-0.4-1adf27c9
+package-id ttprsc-s8601-1.0.1.0-47e39635
+package-id ck-0.4.4-3b52e587
+package-id dt-dflt-clss-0.1.2.0-955b2030
+package-id http-typs-0.12.2-63aa7cef
+package-id cs-nsnstv-1.2.0.11-223a5fdf
+package-id lns-4.17-692fc27a
+package-id cll-stck-0.1.0-59304e3a
 package-id filepath-1.4.2.1
-package-id kn-xtnsns-5.2-6f640ed8
-package-id djnctns-4.4-7ce62995
-package-id nvrnt-0.5.1-5ff8cccc
-package-id prlll-3.2.2.0-db6e353a
-package-id rflctn-2.1.4-114bfca9
-package-id lns-sn-1.0.2-6ad30605
-package-id ntwrk-r-2.6.1.0-f20dc227
-package-id prsc-3.1.13.0-f7e8b953
-package-id sf-xcptns-0.1.7.0-e177c5d6
-package-id srvnt-0.15-bed3b610
-package-id QckChck-2.12.6.1-3df60eeb
-package-id rf-2.0.0.0-6c80621a
-package-id tf-rndm-0.5-60cb9e89
-package-id http-md-0.7.1.3-10ea8156
-package-id tf8-strng-1.0.1.1-1e834a29
-package-id sngltn-bl-0.1.4-4cfd2c98
-package-id strng-cnvrsns-0.4.0.1-bce9e19a
-package-id vlt-0.3.1.2-fd49e98f
-package-id srvnt-clnt-0.15-24b430b1
-package-id http-clnt-0.5.14-ce3e4e25
-package-id blz-bldr-0.4.1.0-0a8c68a2
-package-id mmry-0.14.18-2f3fe0e7
-package-id bsmnt-0.0.8-b2b1f8b5
-package-id mm-typs-0.1.0.8-40b1db84
-package-id ntwrk-2.8.0.0-f10b4ce5
-package-id strmng-cmmns-0.2.1.0-7562808c
-package-id sync-2.2.1-e9d88ad1
+package-id kn-xtnsns-5.2-4f5db542
+package-id djnctns-4.4-b769ce9a
+package-id nvrnt-0.5.1-d1191f12
+package-id prlll-3.2.2.0-cd2b3cad
+package-id rflctn-2.1.4-942e84ea
+package-id lns-sn-1.0.2-ffe7d36b
+package-id ntwrk-r-2.6.1.0-230dda7c
+package-id parsec-3.1.13.0
+package-id sf-xcptns-0.1.7.0-16dae1ee
+package-id srvnt-0.15-962a989c
+package-id QckChck-2.12.6.1-61da28ae
+package-id rf-2.0.0.0-9c214a83
+package-id tf-rndm-0.5-f848133a
+package-id http-md-0.7.1.3-ed2d9955
+package-id tf8-strng-1.0.1.1-8039713e
+package-id sngltn-bl-0.1.4-9ae15268
+package-id strng-cnvrsns-0.4.0.1-3450de76
+package-id vlt-0.3.1.2-6dec2f8d
+package-id srvnt-clnt-0.15-9678997a
+package-id http-clnt-0.6.1.1-710c6fab
+package-id blz-bldr-0.4.1.0-47d5d0eb
+package-id mmry-0.14.18-80219d44
+package-id bsmnt-0.0.10-bd93afd4
+package-id mm-typs-0.1.0.9-e1962269
+package-id ntwrk-2.8.0.0-71d5d32c
+package-id strmng-cmmns-0.2.1.0-78e72853
+package-id sync-2.2.1-0c41627e
 package-id directory-1.3.3.0
 package-id process-1.6.3.0
-package-id zlb-0.6.2-9758b8bf
-package-id srvnt-clnt-cr-0.15-02a220dd
-package-id bs64-bytstrng-1.0.0.1-551b6b9b
-package-id gnrcs-sp-0.4.0.1-1a3dbd17
-package-id sp-cr-0.4.0.0-1878d9f6
-package-id sf-0.3.17-de36676b
-package-id srvnt-srvr-0.15-16ca00a5
-package-id rsrct-1.2.2-ab938f85
-package-id nlft-cr-0.1.2.0-42b2b121
-package-id w-3.2.1.2-72f27867
-package-id w-pp-sttc-3.1.6.2-5c7d861f
-package-id blz-html-0.9.1.1-85959907
-package-id blz-mrkp-0.8.2.2-21b77b5c
-package-id cryptnt-0.25-8653e0f5
-package-id fl-mbd-0.0.11-505e07eb
-package-id http-dt-0.0.8-a7216bcd
-package-id ld-lcl-1.0.0.7-dc18342a
-package-id ptprs-pplctv-0.14.3.0-afefca8d
-package-id ns-wl-pprnt-0.6.8.2-dc1e525e
-package-id ns-trmnl-0.8.2-5f43dbad
-package-id clr-2.3.4-9d218237
-package-id nx-cmpt-0.5.1-948f09c4
-package-id w-xtr-3.0.24.3-7367c6ed
-package-id fst-lggr-2.4.11-69714fa1
-package-id t-pdt-0.1.4-29279433
-package-id sy-fl-0.2.2-17d01334
-package-id nx-tm-0.3.8-400035c2
-package-id ld-tm-1.1.0.3-7df89a11
-package-id prt-1.7.6-2da17ec9
-package-id ppr-0.1.4-6048ba6d
-package-id bytrdr-1.0.4-d8111396
-package-id w-lggr-2.3.2-a4eeeac3
-package-id wrd8-0.1.3-d1889831
-package-id wrp-3.2.25-27317fcb
-package-id bsb-http-chnkd-0.0.0.4-055b962d
-package-id http2-1.6.4-1d47a1ef
-package-id ntwrk-byt-rdr-0.0.0.0-4ffabd6d
-package-id psqs-0.2.7.0-d1fb30e7
-package-id smpl-sndfl-0.2.27-b3808f67
-package-id http-clnt-tls-0.3.5.3-c99212a5
-package-id cnnctn-0.2.8-679aef54
-package-id bytbl-0.1.1-9f99eca9
-package-id scks-0.5.6-9dea8c84
-package-id crl-0.5.7.0-3ab5e31c
-package-id tls-1.4.1-d1d1d6b0
-package-id sn1-ncdng-0.9.5-df8a2212
-package-id sn1-typs-0.3.2-384f619e
-package-id hrglss-0.2.12-9aa2e6de
-package-id x509-1.7.5-967b9ec6
-package-id sn1-prs-0.9.4-c3f363c4
-package-id pm-0.2.4-021665b0
-package-id x509-str-1.6.7-3cc2282c
-package-id x509-vldtn-1.6.11-03376952
-package-id x509-systm-1.6.6-32c014a2
+package-id zlb-0.6.2-31072b84
+package-id srvnt-clnt-cr-0.15-12ff8964
+package-id bs64-bytstrng-1.0.0.2-38cdc985
+package-id gnrcs-sp-0.4.0.1-3bb4dbbf
+package-id sp-cr-0.4.0.0-adc0fa25
+package-id sf-0.3.17-b49a10e6
+package-id srvnt-srvr-0.15-a4d81847
+package-id rsrct-1.2.2-94a5d62a
+package-id nlft-cr-0.1.2.0-cfeb6b5c
+package-id w-3.2.2-4f899bb6
+package-id w-pp-sttc-3.1.6.3-923f7f60
+package-id blz-html-0.9.1.1-4f4a9a6a
+package-id blz-mrkp-0.8.2.2-11f7b115
+package-id cryptnt-0.25-fd2a658a
+package-id fl-mbd-0.0.11-e186bfc3
+package-id http-dt-0.0.8-e5493eb4
+package-id ld-lcl-1.0.0.7-c67698fd
+package-id ptprs-pplctv-0.14.3.0-4fdb2bb8
+package-id ns-wl-pprnt-0.6.8.2-eba24cfb
+package-id ns-trmnl-0.9-df494403
+package-id clr-2.3.4-427597bd
+package-id nx-cmpt-0.5.1-446ae259
+package-id w-xtr-3.0.25-c53f093f
+package-id fst-lggr-2.4.13-3a4bdd3e
+package-id t-pdt-0.1.4.1-34783752
+package-id sy-fl-0.2.2-a8675319
+package-id nx-tm-0.4.5-de4eef26
+package-id ld-tm-1.1.0.3-9d15f9fa
+package-id prt-1.7.7-8a3d5544
+package-id ppr-0.1.7-82c395c3
+package-id bytrdr-1.0.4-7109bcd8
+package-id w-lggr-2.3.4-5dd71d53
+package-id wrd8-0.1.3-3469f064
+package-id wrp-3.2.26-1ac3bbce
+package-id bsb-http-chnkd-0.0.0.4-4762618a
+package-id http2-1.6.4-5de8de2c
+package-id ntwrk-byt-rdr-0.0.0.0-3d700821
+package-id psqs-0.2.7.1-6665689b
+package-id smpl-sndfl-0.2.28-8de9fff9
+package-id http-clnt-tls-0.3.5.3-bbda5f80
+package-id cnnctn-0.2.8-3f365cb2
+package-id bytbl-0.1.1-5c5936bf
+package-id scks-0.5.6-ac54e9ec
+package-id crl-0.5.8.0-fd79b624
+package-id tls-1.4.1-a548e628
+package-id sn1-ncdng-0.9.5-e8a8d2f9
+package-id sn1-typs-0.3.2-c7c32391
+package-id hrglss-0.2.12-2b90e1e5
+package-id x509-1.7.5-4a1a6cb7
+package-id sn1-prs-0.9.4-c5cf480f
+package-id pm-0.2.4-c8705d8f
+package-id x509-str-1.6.7-c4ef19f3
+package-id x509-vldtn-1.6.11-e86f1e05
+package-id x509-systm-1.6.6-0274c58d
